--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   uuid: ^3.0.5 
   firebase_core: ^2.15.1
   firebase_auth: ^4.9.0
+  firebase_storage: ^11.2.6
 
 dev_dependencies:
   flutter_test:
